  
Important changes in 2.x (2020-10-xx)

* Feature: Issue #63 - Hardware accelerated decoding/encoding has been added. See HWACCEL
  for details how it works.
* **This is completely experimental code**, so please expect that it will not work for you!
* Hardware acceleration is only partly implemented, currently VAAPI (Intel) is supported only.
* Hardware decoding does not work at all, yet.
* Once I got decoding to work I'll do some testing with MMAL (decoding)/OpenMAX (encoding) on
  a Raspberry.
* The decoding part is a more tricky, if encoding is set set to hardware, this hardware is
  there and capable of encoding, it will work. If decoding in hardware is possible depends on
  the source file, thus the file needs to be checked first and then decided if hardware
  acceleration can be used or fallback to software is required. FFmpeg requires that to be set
  via command line, FFmpegfs must decided that automatically.
* Bugfix:

Important changes in 2.1 (2020-10-XX)
  
* Feature: Add BLURAY_VIDEO_FORMAT_2160P (UHD)
* Bugfix: Did not transcode some source files with invalid DTS.
* Bugfix: Cosmetical - No need to log date/time twice in syslog.
* Bugfix: Cosmetical - Fix man page/online help for --recodesame parameter.
* Log cache close action at trace level
* Shorter log entry when opening cache files

Important changes in 2.0 (2020-09-13)

Hurray! This is release 2.0!

* Feature: No new features, new release 2.0 after feature freeze.
* Bugfix: Issue #64 - Fixed playback stopping prematurely on some files.

Important changes in 1.99 (2020-07-18)

* Libav support has been dropped. There is no activity on https://git.libav.org/?p=libav.git
  since 21.08.2019, and some features that FFmpegfs required were already lagging behind
  FFmpeg API. Supporting Libav already bound a lot of my time that I could better spend
  on new features or fixes for FFmpegfs.
* Feature: Add PNG/BMP/JPG frame sets to 'make check'. Checks number of files and cp