@@ -12,7 +12,12 @@ Important changes in 2.x (2020-10-xx)
   for details how it works.
 * **This is completely experimental code**, so please expect that it will not work for you!
 * Hardware acceleration is only partly implemented, currently VAAPI (Intel) is supported only.
-* Hardware decoding does not work at all, yet.
+* Hardware decoding works now, at least for me:
+  - VAAPI supported only
+  - H264, H265/HEVC, MJPEG, MPEG-2 and VC-8 are supported
+  - VC-9 does not work
+* MMAL/OMX (Raspberry) should come next.
+* Have a CUDA capable graphics adapter and interested in testing? Please write me an e-mail.
 * Once I got decoding to work I'll do some testing with MMAL (decoding)/OpenMAX (encoding) on
   a Raspberry.
 * The decoding part is a more tricky, if encoding is set set to hardware, this hardware is
